# pac-man

./: CMakeLists.txt  README.md
.circleci/: config.yml
.github/workflows/: logic-buil.yml
app/: CMakeLists.txt
app/include/camera/: Camera.h
app/include/factory/: ConcreteFactory.h
app/include/game/: Game.h
app/include/state/: GameOverState.h  LevelState.h  MenuState.h  PausedState.h  State.h  StateManager.h  VictoryState.h
app/include/utils/: AnimationManager.h  Constants.h  ResourceManager.h
app/include/view/: Barrier.h  Coin.h  EntityView.h  Fruit.h  Ghost.h  MovableEntityView.h  PacMan.h  Wall.h
app/src/: main.cpp
app/src/camera/: Camera.cpp
app/src/factory/: ConcreteFactory.cpp
app/src/game/: Game.cpp
app/src/state/: GameOverState.cpp  LevelState.cpp  MenuState.cpp  PausedState.cpp  State.cpp  StateManager.cpp  VictoryState.cpp
app/src/utils/: AnimationManager.cpp  ResourceManager.cpp
app/src/view/: Barrier.cpp  Coin.cpp  EntityView.cpp  Fruit.cpp  Ghost.cpp  MovableEntityView.cpp  PacMan.cpp  Wall.cpp
assets/maps/: initial_map.txt  map.txt
assets/pseudo-codes/: collision.txt  locked-ghost.txt
logic/: CMakeLists.txt
logic/include/entities/: EntityModel.h  MovableEntityModel.h  PacMan.h  PacManModel.h  Wall.h
logic/include/entities/collectable/: Coin.h  Collectable.h  Fruit.h
logic/include/entities/ghost/: DirectChaseGhost.h  Ghost.h  LockedGhost.h  LookaheadChaseGhost.h  PredictiveGhost.h
logic/include/events/: Event.h  EventType.h
logic/include/patterns/: AbstractFactory.h  Observer.h  Subject.h
logic/include/score/: Score.h
logic/include/utils/: Constants.h  Direction.h  Event.h  FileManager.h  FileReader.h  Random.h  ResourceManager.h  Stopwatch.h
logic/include/world/: Collision.h  TileMap.h  World.h
logic/src/entities/: EntityModel.cpp  MovableEntityModel.cpp  PacMan.cpp  PacManModel.cpp  Wall.cpp
logic/src/entities/collectable/: Coin.cpp  Collectable.cpp  Fruit.cpp
logic/src/entities/event/: Event.cpp
logic/src/entities/ghost/: DirectChaseGhost.cpp  Ghost.cpp  LockedGhost.cpp  LookaheadChaseGhost.cpp  PredictiveGhost.cpp
logic/src/event/: Event.cpp
logic/src/pattern/: AbstractFactory.cpp  Observer.cpp  Subject.cpp
logic/src/score/: Score.cpp
logic/src/utils/: Direction.cpp  Event.cpp  FileManager.cpp  FileReader.cpp  Random.cpp  ResourceManager.cpp  Stopwatch.cpp
logic/src/world/: Collision.cpp  TileMap.cpp  World.cpp
tests/: CMakeLists.txt  TestStopwatch.cpp
tests/world/: TestWorld.cpp
